--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
  <main>
   <div class="border">
-    <img height="290" width="290" src="images/image-qr-code.png" alt="QR-Code">
+    <img height="290" width="290" src="https://raw.githubusercontent.com/rivasash1/QR_code_componet_solution/main/images/image-qr-code.png" alt="QR-Code">
     <h1> Improve your front-end skills by building projects </h1>
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
